syntax = "proto3";
package game_service;
import "google/protobuf/empty.proto";

service GameService {
    rpc Login (PlayerInfo) returns (google.protobuf.Empty);
    rpc Logout (PlayerIdRequest) returns (google.protobuf.Empty);
    rpc Aoe (Coord) returns (google.protobuf.Empty);
    rpc Moving (MovingRequest) returns (Coord);
    rpc Query (PlayerIdRequest) returns (PlayerInfo);
}

message PlayerInfo {
   uint64 id = 1;
   uint64 x = 2;
   uint64 y = 3;
   uint64 money = 4;
}

message PlayerIdRequest {
    uint64 player_id = 1;
}

message Coord {
   uint64 x = 1;
   uint64 y = 2;
}

message MovingRequest {
   uint64 id = 1;
   Coord target = 2;
}